--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/config": "^0.0.41",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
+        "bcrypt": "^5.0.1",
         "config": "^3.3.7",
         "express": "^4.17.2",
+        "express-validator": "^6.14.0",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.14.1"
     },
     "devDependencies": {
         "@types/node": "^17.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.10.1",
+        "@typescript-eslint/parser": "^5.10.1",
         "concurrently": "^7.0.0",
+        "eslint": "^8.8.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.5"
