--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "dependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/config": "^0.0.41",
+        "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.8",
         "bcrypt": "^5.0.1",
         "config": "^3.3.7",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "express": "^4.17.2",
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
@@ -25,6 +28,7 @@
         "sequelize": "^6.14.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/node": "^17.0.10",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
