--- a/client/angular.json
+++ b/client/angular.json
@@ -73,7 +73,7 @@
                         },
                         "development": {
                             "browserTarget": "client:build:development",
-                            "proxyConfig": "src/proxy.conf.json"
+                            "proxyConfig": "proxy.config.json"
                         }
                     },
                     "defaultConfiguration": "development"
