--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.8",
+        "axios": "^0.25.0",
         "bcrypt": "^5.0.1",
         "config": "^3.3.7",
         "cookie-parser": "^1.4.6",
