--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -20,7 +20,8 @@
         "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
         "no-multiple-empty-lines": ["warn", {"max": 2, "maxEOF": 0, "maxBOF": 0}],
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-empty-function": ["warn"]
+        "@typescript-eslint/no-empty-function": ["warn"],
+        "no-useless-catch": "warn"
     },
     "ignorePatterns": [
     "node_modules",
