--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "express": "^4.17.2",
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
+        "nodemailer": "^6.7.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.14.1"
@@ -31,6 +32,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/node": "^17.0.10",
+        "@types/nodemailer": "^6.4.4",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "concurrently": "^7.0.0",
