--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/uuid": "^8.3.4",
         "axios": "^0.25.0",
         "bcrypt": "^5.0.1",
         "config": "^3.3.7",
@@ -27,7 +28,8 @@
         "nodemailer": "^6.7.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.14.1"
+        "sequelize": "^6.14.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
